# cpp-sample

./: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  DockerFile  main.cpp  main.h  run_cmake.sh  ubuntu_setup.txt
.sudu/: project_configuration.json
configuration/projectModel/: build_project.sh
